--- a/app/src/main/res/layout/view_team_presented.xml
+++ b/app/src/main/res/layout/view_team_presented.xml
@@ -2,8 +2,8 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     xmlns:tools="http://schemas.android.com/tools">
 
     <androidx.appcompat.widget.AppCompatImageView
@@ -12,6 +12,7 @@
         android:layout_height="60dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         tools:srcCompat="@tools:sample/avatars" />
 
     <androidx.appcompat.widget.AppCompatTextView
@@ -21,8 +22,8 @@
         android:text="Time"
         android:textColor="@color/white"
         android:textSize="12sp"
-        android:layout_marginTop="10dp"
-        app:layout_constraintEnd_toEndOf="@+id/viewTeamPresentedTeamCover"
-        app:layout_constraintStart_toStartOf="@+id/viewTeamPresentedTeamCover"
-        app:layout_constraintTop_toBottomOf="@+id/viewTeamPresentedTeamCover" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/viewTeamPresentedTeamCover"
+        tools:text="eyondfdfdffd" />
 </androidx.constraintlayout.widget.ConstraintLayout>
