--- a/app/src/main/res/drawable-v24/bg_match_time_now_rounded.xml
+++ b/app/src/main/res/drawable-v24/bg_match_time_now_rounded.xml
@@ -5,7 +5,7 @@
             <corners
                 android:topRightRadius="16dp"
                 android:bottomLeftRadius="16dp"/>
-            <solid android:color="@color/font_grey" />
+            <solid android:color="@color/ongoing_match" />
             <size android:width="43dp" android:height="25dp" />
         </shape>
     </item>
