--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,6 +12,6 @@
     <color name="ongoing_match">#F42A35</color>
     <color name="card_brand">#272639</color>
     <color name="font_80">#80FFFFFF</color>
-    <color name="font_20">#20FFFFFF</color>
+    <color name="font_grey">#515060</color>
 
 </resources>
