--- a/app/src/main/res/layout/view_league_series.xml
+++ b/app/src/main/res/layout/view_league_series.xml
@@ -2,13 +2,13 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     xmlns:tools="http://schemas.android.com/tools"
     tools:ignore="MissingDefaultResource">
 
     <androidx.appcompat.widget.AppCompatImageView
-        android:id="@+id/viewLeagueSeriesCover"
+        android:id="@+id/viewLeagueSeriesImageView"
         android:layout_width="16dp"
         android:layout_height="16dp"
         app:layout_constraintStart_toStartOf="parent"
@@ -19,11 +19,14 @@
         android:id="@+id/viewLeagueSeriesLabel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:lines="1"
+        android:maxLength="50"
         android:textColor="@color/white"
         android:textSize="10sp"
-        android:layout_marginStart="8dp"
-        app:layout_constraintBottom_toBottomOf="@+id/viewLeagueSeriesCover"
-        app:layout_constraintStart_toEndOf="@+id/viewLeagueSeriesCover"
-        app:layout_constraintTop_toTopOf="@+id/viewLeagueSeriesCover"
+        app:layout_constraintBottom_toBottomOf="@+id/viewLeagueSeriesImageView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/viewLeagueSeriesImageView"
+        app:layout_constraintTop_toTopOf="@+id/viewLeagueSeriesImageView"
         tools:text="League + serie" />
 </androidx.constraintlayout.widget.ConstraintLayout>
