--- a/app/src/main/res/layout/fragment_home_matches.xml
+++ b/app/src/main/res/layout/fragment_home_matches.xml
@@ -44,4 +44,15 @@
             tools:listitem="@layout/item_match_received"
             tools:itemCount="10" />
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+
+    <ProgressBar
+        android:id="@+id/homeMatchesProgressBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:indeterminateTint="@color/white"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
