--- a/app/src/main/res/layout/view_team_presented.xml
+++ b/app/src/main/res/layout/view_team_presented.xml
@@ -21,6 +21,9 @@
         android:layout_height="wrap_content"
         android:textColor="@color/white"
         android:textSize="12sp"
+        android:lines="1"
+        android:ellipsize="end"
+        android:maxLength="12"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/viewTeamPresentedTeamImageView"
