--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,6 +12,7 @@
     <color name="ongoing_match">#F42A35</color>
     <color name="card_brand">#272639</color>
     <color name="font_80">#80FFFFFF</color>
+    <color name="font_light_grey">#C4C4C4</color>
     <color name="font_grey">#515060</color>
-
+    <color name="font_grey_players">#6C6B7E</color>
 </resources>
