feat: fixes match details layout

--- a/app/src/main/res/drawable/bg_team_player_right_rounded.xml
+++ b/app/src/main/res/drawable/bg_team_player_right_rounded.xml
@@ -3,8 +3,8 @@
     <item android:state_pressed="false">
         <shape android:shape="rectangle">
             <corners
-                android:topRightRadius="12dp"
-                android:bottomRightRadius="12dp"/>
+                android:topLeftRadius="12dp"
+                android:bottomLeftRadius="12dp"/>
             <solid android:color="@color/card_brand" />
             <size android:width="200dp" android:height="54dp" />
         </shape>
