--- a/app/src/main/res/layout/item_team_player_right.xml
+++ b/app/src/main/res/layout/item_team_player_right.xml
@@ -16,7 +16,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <androidx.appcompat.widget.LinearLayoutCompat
-            android:id="@+id/homeMatchesTime"
+            android:id="@+id/itemTeamPlayerRightIdBox"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/bg_team_player_right_rounded"
@@ -25,16 +25,36 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
 
-        <androidx.appcompat.widget.LinearLayoutCompat
-            android:id="@+id/itemTeamPlayerImage"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+        <androidx.cardview.widget.CardView
+            android:id="@+id/itemTeamPlayerRightImageCardView"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            app:cardCornerRadius="8dp"
             android:layout_marginStart="12dp"
             android:layout_marginBottom="9dp"
-            android:background="@drawable/bg_team_player_image_rounded"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="@+id/homeMatchesTime"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintStart_toStartOf="@+id/itemTeamPlayerRightIdBox"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <androidx.appcompat.widget.AppCompatImageView
+                android:id="@+id/itemTeamPlayerRightImage"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:scaleType="fitXY"
+                android:background="@color/font_light_grey"
+                tools:srcCompat="@tools:sample/avatars" />
+        </androidx.cardview.widget.CardView>
+
+<!--        <androidx.appcompat.widget.LinearLayoutCompat-->
+<!--            android:id="@+id/itemTeamPlayerRightImage"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_marginStart="12dp"-->
+<!--            android:layout_marginBottom="9dp"-->
+<!--            android:background="@drawable/bg_team_player_image_rounded"-->
+<!--            app:layout_constraintBottom_toBottomOf="parent"-->
+<!--            app:layout_constraintStart_toStartOf="@+id/itemTeamPlayerRightIdBox"-->
+<!--            app:layout_constraintTop_toTopOf="parent" />-->
 
         <androidx.appcompat.widget.LinearLayoutCompat
             android:layout_width="wrap_content"
@@ -43,11 +63,11 @@
             android:gravity="start"
             android:layout_marginStart="16dp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/itemTeamPlayerImage"
-            app:layout_constraintTop_toTopOf="@id/homeMatchesTime">
+            app:layout_constraintStart_toEndOf="@+id/itemTeamPlayerRightImageCardView"
+            app:layout_constraintTop_toTopOf="@id/itemTeamPlayerRightIdBox">
 
             <androidx.appcompat.widget.AppCompatTextView
-                android:id="@+id/itemTeamPlayerNickname"
+                android:id="@+id/itemTeamPlayerRightNickname"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Nickname"
@@ -55,6 +75,7 @@
                 android:textSize="14sp" />
 
             <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/itemTeamPlayerRightName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Nome jogador"
