--- a/app/src/main/res/layout/item_team_player_right.xml
+++ b/app/src/main/res/layout/item_team_player_right.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:id="@+id/homeMatchesItem"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:id="@+id/homeMatchesItem"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="wrap_content"
@@ -29,9 +28,9 @@
             android:id="@+id/itemTeamPlayerRightImageCardView"
             android:layout_width="48dp"
             android:layout_height="48dp"
-            app:cardCornerRadius="8dp"
             android:layout_marginStart="12dp"
             android:layout_marginBottom="9dp"
+            app:cardCornerRadius="8dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="@+id/itemTeamPlayerRightIdBox"
             app:layout_constraintTop_toTopOf="parent">
@@ -40,28 +39,17 @@
                 android:id="@+id/itemTeamPlayerRightImage"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:scaleType="fitXY"
                 android:background="@color/font_light_grey"
+                android:scaleType="fitXY"
                 tools:srcCompat="@tools:sample/avatars" />
         </androidx.cardview.widget.CardView>
-
-<!--        <androidx.appcompat.widget.LinearLayoutCompat-->
-<!--            android:id="@+id/itemTeamPlayerRightImage"-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_marginStart="12dp"-->
-<!--            android:layout_marginBottom="9dp"-->
-<!--            android:background="@drawable/bg_team_player_image_rounded"-->
-<!--            app:layout_constraintBottom_toBottomOf="parent"-->
-<!--            app:layout_constraintStart_toStartOf="@+id/itemTeamPlayerRightIdBox"-->
-<!--            app:layout_constraintTop_toTopOf="parent" />-->
 
         <androidx.appcompat.widget.LinearLayoutCompat
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:gravity="start"
             android:layout_marginStart="16dp"
+            android:gravity="start"
+            android:orientation="vertical"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toEndOf="@+id/itemTeamPlayerRightImageCardView"
             app:layout_constraintTop_toTopOf="@id/itemTeamPlayerRightIdBox">
@@ -70,17 +58,17 @@
                 android:id="@+id/itemTeamPlayerRightNickname"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Nickname"
                 android:textColor="@color/white"
-                android:textSize="14sp" />
+                android:textSize="14sp"
+                tools:text="Nickname" />
 
             <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/itemTeamPlayerRightName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Nome jogador"
                 android:textColor="@color/font_grey_players"
-                android:textSize="12sp" />
+                android:textSize="12sp"
+                tools:text="Nome jogador" />
         </androidx.appcompat.widget.LinearLayoutCompat>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
