--- a/app/src/main/res/layout/item_match_received.xml
+++ b/app/src/main/res/layout/item_match_received.xml
@@ -66,7 +66,7 @@
                     android:id="@+id/homeMatchesVersusLabel"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="VS"
+                    android:text="@string/matches_versus_label"
                     android:layout_marginHorizontal="20dp"
                     android:textColor="@color/font_80"
                     android:textSize="12sp"
