--- a/app/src/main/res/layout/view_team_presented.xml
+++ b/app/src/main/res/layout/view_team_presented.xml
@@ -10,6 +10,7 @@
         android:id="@+id/viewTeamPresentedTeamImageView"
         android:layout_width="53dp"
         android:layout_height="60dp"
+        android:layout_marginHorizontal="5dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -23,7 +24,7 @@
         android:textSize="10sp"
         android:lines="1"
         android:ellipsize="end"
-        android:maxLength="12"
+        android:maxLength="15"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/viewTeamPresentedTeamImageView"
