--- a/app/src/main/res/layout/item_match_received.xml
+++ b/app/src/main/res/layout/item_match_received.xml
@@ -45,45 +45,14 @@
 
             </androidx.appcompat.widget.LinearLayoutCompat>
 
-            <androidx.constraintlayout.widget.ConstraintLayout
-                android:id="@+id/homeMatchesTeamsVersus"
+            <com.example.csscorechallenge.ui.common.TeamOpponentsView
+                android:id="@+id/homeMatchesTeamOpponents"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="18dp"
-                android:layout_marginHorizontal="20dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/homeMatchesTime">
-
-                <com.example.csscorechallenge.ui.common.TeamPresentationView
-                    android:id="@+id/homeMatchesFirstTeam"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"/>
-
-                <androidx.appcompat.widget.AppCompatTextView
-                    android:id="@+id/homeMatchesVersusLabel"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/matches_versus_label"
-                    android:layout_marginHorizontal="20dp"
-                    android:textColor="@color/font_80"
-                    android:textSize="12sp"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toStartOf="@id/homeMatchesSecondTeam"
-                    app:layout_constraintStart_toEndOf="@+id/homeMatchesFirstTeam"
-                    app:layout_constraintTop_toTopOf="parent" />
-
-                <com.example.csscorechallenge.ui.common.TeamPresentationView
-                    android:id="@+id/homeMatchesSecondTeam"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
-
-            </androidx.constraintlayout.widget.ConstraintLayout>
-
+                app:layout_constraintTop_toBottomOf="@+id/homeMatchesTime" />
 
             <View
                 android:id="@+id/homeMatchesBottomDividerView"
@@ -91,7 +60,7 @@
                 android:layout_height="1dp"
                 android:layout_marginTop="18dp"
                 android:background="@color/font_grey"
-                app:layout_constraintTop_toBottomOf="@+id/homeMatchesTeamsVersus"
+                app:layout_constraintTop_toBottomOf="@+id/homeMatchesTeamOpponents"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent" />
 
@@ -107,7 +76,5 @@
                 app:layout_constraintTop_toBottomOf="@id/homeMatchesBottomDividerView"/>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
-
     </androidx.cardview.widget.CardView>
-
 </androidx.constraintlayout.widget.ConstraintLayout>
