--- a/app/src/main/res/layout/view_team_presented.xml
+++ b/app/src/main/res/layout/view_team_presented.xml
@@ -10,7 +10,7 @@
         android:id="@+id/viewTeamPresentedTeamImageView"
         android:layout_width="53dp"
         android:layout_height="60dp"
-        android:layout_marginHorizontal="5dp"
+        android:layout_marginHorizontal="9dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -28,5 +28,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/viewTeamPresentedTeamImageView"
-        tools:text="Time Beta" />
+        tools:text="Time Beta teste"
+        tools:ignore="SmallSp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
