--- a/app/src/main/res/layout/view_team_presented.xml
+++ b/app/src/main/res/layout/view_team_presented.xml
@@ -10,7 +10,7 @@
         android:id="@+id/viewTeamPresentedTeamImageView"
         android:layout_width="53dp"
         android:layout_height="60dp"
-        android:layout_marginHorizontal="9dp"
+        android:layout_marginHorizontal="11dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -22,12 +22,13 @@
         android:layout_height="wrap_content"
         android:textColor="@color/white"
         android:textSize="10sp"
-        android:lines="1"
+        android:gravity="center"
         android:ellipsize="end"
-        android:maxLength="15"
+        android:maxLength="14"
+        android:maxLines="1"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/viewTeamPresentedTeamImageView"
-        tools:text="Time Beta teste"
+        tools:text="Furia God"
         tools:ignore="SmallSp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
