--- a/app/src/main/res/layout/fragment_match_details.xml
+++ b/app/src/main/res/layout/fragment_match_details.xml
@@ -92,6 +92,19 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.core.widget.NestedScrollView>
 
+    <com.facebook.shimmer.ShimmerFrameLayout
+        android:id="@+id/matchDetailsLoadingLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:visibility="visible"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:visibility="gone">
+
+        <include layout="@layout/view_match_details_placeholder" />
+    </com.facebook.shimmer.ShimmerFrameLayout>
+
     <ProgressBar
         android:id="@+id/matchDetailsProgressBar"
         android:layout_width="wrap_content"
