--- a/app/src/main/res/layout/view_home_matches_item_placeholder.xml
+++ b/app/src/main/res/layout/view_home_matches_item_placeholder.xml
@@ -8,13 +8,12 @@
     android:paddingHorizontal="20dp">
 
     <androidx.cardview.widget.CardView
-        android:id="@+id/viewBookClubReceivedItemPlaceHolderCardView"
         android:layout_width="match_parent"
         android:layout_height="170dp"
         android:layout_marginTop="30dp"
         android:layout_marginBottom="4dp"
         android:layout_marginHorizontal="12dp"
-        android:backgroundTint="@color/grey_DDDDDD"
+        android:backgroundTint="@color/card_brand"
         android:contentDescription="@null"
         app:cardCornerRadius="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
