--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -18,6 +18,7 @@
             app:popUpTo="@id/splashFragment"
             app:popUpToInclusive="true" />
     </fragment>
+
     <fragment
         android:id="@+id/matchesFragment"
         android:name="com.example.csscorechallenge.ui.homematches.HomeMatchesFragment"
@@ -26,9 +27,9 @@
         <action
             android:id="@+id/to_matchDetails"
             app:destination="@id/matchDetailsFragment"
-            app:enterAnim="@anim/nav_default_enter_anim"
-            app:popUpTo="@id/matchesFragment" />
+            app:enterAnim="@anim/nav_default_enter_anim" />
     </fragment>
+
     <fragment
         android:id="@+id/matchDetailsFragment"
         android:name="com.example.csscorechallenge.ui.matchdetails.MatchDetailsFragment"
@@ -42,6 +43,7 @@
         <action
             android:id="@+id/action_matchDetailsFragment_to_matchesFragment"
             app:destination="@id/matchesFragment"
-            app:popUpTo="@id/matchDetailsFragment" />
+            app:popUpTo="@id/matchesFragment"
+            app:popUpToInclusive="false" />
     </fragment>
 </navigation>
