--- a/app/src/main/res/layout/fragment_splash.xml
+++ b/app/src/main/res/layout/fragment_splash.xml
@@ -8,10 +8,14 @@
     android:background="@color/brand"
     tools:context=".ui.splash.SplashFragment">
 
-    <androidx.appcompat.widget.AppCompatImageView
-        android:layout_width="wrap_content"
+    <com.airbnb.lottie.LottieAnimationView
+        android:id="@+id/splashFragmentAnimationView"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:src="@drawable/fuze_logo"
+        android:adjustViewBounds="true"
+        android:layout_marginHorizontal="60dp"
+        app:lottie_fileName="gamers_splash_animation.json"
+        app:lottie_autoPlay="true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
