--- a/app/src/main/res/layout/fragment_match_details.xml
+++ b/app/src/main/res/layout/fragment_match_details.xml
@@ -21,7 +21,7 @@
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/homeMatchesTeamsVersus"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="24dp"
                 android:visibility="invisible"
@@ -30,27 +30,15 @@
                 app:layout_constraintTop_toTopOf="parent"
                 tools:visibility="visible">
 
-                <com.example.csscorechallenge.ui.common.TeamOpponentsView
+                <com.example.csscorechallenge.ui.common.TeamOpponentsMatchDetailsView
                     android:id="@+id/matchDetailsTeamOpponents"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
-
-            <androidx.appcompat.widget.AppCompatTextView
-                android:id="@+id/matchDetailsDateLabel"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
-                android:textColor="@color/white"
-                android:textSize="12sp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/homeMatchesTeamsVersus"
-                tools:text="Hoje, 21:00" />
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/matchDetailsFirstTeamPlayersReciclerView"
@@ -59,7 +47,7 @@
                 android:layout_marginTop="24dp"
                 app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                 app:layout_constraintEnd_toStartOf="@+id/matchDetailsLeftGuideLine"
-                app:layout_constraintTop_toBottomOf="@+id/matchDetailsDateLabel"
+                app:layout_constraintTop_toBottomOf="@+id/homeMatchesTeamsVersus"
                 tools:itemCount="5"
                 tools:listitem="@layout/item_team_player_left"
                 tools:visibility="visible" />
@@ -71,7 +59,7 @@
                 android:layout_marginTop="24dp"
                 app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                 app:layout_constraintStart_toStartOf="@+id/matchDetailsRightGuideLine"
-                app:layout_constraintTop_toBottomOf="@+id/matchDetailsDateLabel"
+                app:layout_constraintTop_toBottomOf="@+id/homeMatchesTeamsVersus"
                 tools:itemCount="5"
                 tools:listitem="@layout/item_team_player_right"
                 tools:visibility="visible" />
