--- a/app/src/main/res/layout/fragment_splash.xml
+++ b/app/src/main/res/layout/fragment_splash.xml
@@ -21,4 +21,14 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="@color/white"
+        android:textSize="28sp"
+        android:text="E-SCORES"
+        app:layout_constraintEnd_toEndOf="@+id/splashFragmentAnimationView"
+        app:layout_constraintStart_toStartOf="@+id/splashFragmentAnimationView"
+        app:layout_constraintTop_toBottomOf="@+id/splashFragmentAnimationView" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
